--- a/static/css/comments.css
+++ b/static/css/comments.css
@@ -133,10 +133,15 @@
 	font-family:PingFang SC;
 	font-weight:500;
 	color:rgba(153,153,153,1);
-	
+	display: flex;
+	align-items: center;
+	height: 100%;
 }
 .comments-user .fabulous image {
 	margin-left: 10rpx;
+	width: 32rpx;
+	height: 31rpx;
+	display: inlin-block;
 }
 .comments-content {
 	width: 100%;
@@ -175,4 +180,7 @@
 	font-family:PingFang SC;
 	font-weight:bold;
 	color:rgba(51,51,51,1);
+}
+.select {
+	margin-bottom: 1px !important;
 }
