--- a/static/css/information.css
+++ b/static/css/information.css
@@ -40,12 +40,14 @@
 	width: 122rpx;
 	height: 130rpx;
 	display: inline-block;
+	margin-right: 10px;
 }
 .avatar image {
 	width: 100%;
 	height: 100%;
 	margin: auto;
 	display: block;
+	border-radius: 50%;
 }
 .details image {
 	width: 94rpx;
