--- a/static/css/comments.css
+++ b/static/css/comments.css
@@ -1,46 +1,62 @@
 .comments-list {
 	height: 100%;
+	z-index: 100000;
 }
 .uni-comments {
+	background: #fff;
 	height: 500px;
 	border-radius:22rpx 22rpx 0px 0px;
-	
 	position: relative;
 }
 .comments-detail:first-child {
-	margin: 0!important;
+	margin-top: 115rpx;
 }
 .comments-detail:last-child {
 	margin-bottom: 300rpx;
 }
 .comments-detail {
-	margin-top: 40rpx;
+	margin-bottom: 30rpx;
 	width: 100%;
 }
 .uni-comments-title {
 	height: 115rpx;
 	line-height: 40rpx;
+	display: flex;
 	justify-content: space-between;
+	box-sizing: border-box;
 	padding: 41rpx 30rpx;
 	border-bottom: 1px solid #E2E2E2;
-	
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	width: 100%;
+	background: #FFFFFF;
+	border-radius:22rpx 22rpx 0px 0px;
+	font-size: 32rpx;
 }	
-
+.uni-comments-title image {
+	width: 25rpx;
+	height: 25rpx;
+	display: block;
+}
 .uni-comments-content {
+	display: flex;
 	flex-wrap: wrap;
 	padding: 15px;
-	padding-bottom: 150rpx;
 	overflow-y: scroll;
 	-webkit-overflow-scrolling: touch; 
 	height: 100%;
 }
 
 .uni-comments-content-box {
+	display: flex;
 	flex-direction: column;
 	align-items: center;
 	width: 25%;
+	box-sizing: border-box;
 }
 .uni-comments-content-image {
+		display: flex;
 		justify-content: center;
 		align-items: center;
 		width: 60upx;
@@ -48,7 +64,7 @@
 		overflow: hidden;
 		border-radius: 10upx;
 	}
-.image {
+.uni-comments-content-image .image {
 	width: 100%;
 	height: 100%;
 }
@@ -63,6 +79,7 @@
 .uni-comments-btn {
 	height: 90upx;
 	line-height: 90upx;
+	border-top: 1px #f5f5f5 solid;
 	text-align: center;
 	color: #666;
 }
@@ -74,13 +91,16 @@
 	height: 115rpx;
 	box-sizing: border-box;
 	padding: 22rpx 30rpx;
+	background: #FFFFFF;
 }
-input {
+.comments-botton input {
 	height: 100%;
 	width: 100%;
-	border-radius: 30rpx;
-	background-color: #F0F0F0;
+	border-radius: 35rpx;
+	background: #F0F0F0;
+	box-sizing: border-box;
 	padding-left: 30rpx;
+	font-size: 24rpx;
 }
 .comments-user {
 	width: 100%;
@@ -88,14 +108,23 @@ input {
 	overflow: hidden;
 	/* display: flex; */
 }
-
-.comments-user view {
+.comments-user image {
+	width: 78rpx;
+	height: 78rpx;
+	display: block;
+	float: left;
+	margin-right: 10rpx;
+	border-radius: 50%;
 }
-.comments-name {
-	font-size:30rpx;
+.comments-user view {
+	float: left;
+}
+.comments-user .comments-name {
+	font-size:28rpx;
 	font-family:PingFang SC;
 	font-weight:500;
 	color:rgba(102,102,102,1);
+	display: block;
 }
 .date {
 	font-size:22rpx;
@@ -104,8 +133,10 @@ input {
 	color:rgba(102,102,102,1);
 	/* line-height:40rpx; */
 }
-
-.fabulous  {
+.comments-user .fabulous {
+	float: right;
+}
+.comments-user .fabulous  {
 	font-size:26rpx;
 	font-family:PingFang SC;
 	font-weight:500;
@@ -114,24 +145,31 @@ input {
 	align-items: center;
 	height: 100%;
 }
-
+.comments-user .fabulous image {
+	margin-left: 10rpx;
+	width: 32rpx;
+	height: 31rpx;
+	display: inlin-block;
+}
 .comments-content {
 	width: 100%;
-	FONT-VARIANT: padd;
-	padding-left: 36px;
+	box-sizing: border-box;
+	padding-left: 48px;
 	padding-right: 3px;
-	font-size: 13px;
+	font-size: 24rpx;
 	font-family: PingFang SC;
 	font-weight: 500;
 	color: rgba(51,51,51,1);
 }
 .reply-comments {
 	margin-top: 7px;
-	background-color: #EFEFEF;
+	background: #EFEFEF;
 	border-radius: 3px;
 	padding: 7px 10px;
+	font-size: 24rpx;
 }
 .reply-comments text {
+	display: block;
 	margin-bottom: 5px;
 }
 .all-replay {
@@ -141,7 +179,8 @@ input {
 .parting-line {
 	width: 100%;
 	height: 1px;
-	background-color: #E2E2E2;
+	background: #E2E2E2;
+	display: block;
 	margin-top: 20px;
 }
 .comments-number {
@@ -152,4 +191,34 @@ input {
 }
 .select {
 	margin-bottom: 1px !important;
+}
+
+/* 文字超过展开收缩 */
+/* 文字描述 start */
+.describe {
+	padding: 25rpx 0;
+	overflow: hidden;
+	line-height: 36rpx;
+}
+.describe view {
+	display: inline;
+}
+.text {
+	font-size:28rpx;
+	font-weight:400;
+	color:rgba(51,51,51,1); 
+	position: relative;
+}
+.describe .anCotent {
+	font-size:24rpx;
+	font-family:PingFang SC;
+	font-weight:500;
+	color:rgba(90,124,171,1);
+	line-height:33rpx;
+	margin-left: 20rpx;
+}
+.describe .anCotent image {
+	width: 26rpx;
+	height: 19rpx;
+	margin-bottom: -1rpx;
 }
