--- a/static/css/releaseImgList.css
+++ b/static/css/releaseImgList.css
@@ -44,7 +44,7 @@
 	height:19rpx;
 	font-size:24rpx;
 	font-family:PingFang SC;
-	font-weight:500;
+	/* font-weight:500; */
 	color:rgba(102,102,102,1);
 	
 }
@@ -73,7 +73,7 @@
 .relese-image_detail .content {
 	padding-top: 25rpx;
 	overflow: hidden;
-	/* position: relative; */
+	line-height: 22px;
 }
 .relese-image_detail .content view {
 	display: inline;
@@ -82,7 +82,7 @@
 	width: 100%;
 	font-size:28rpx;
 	font-family:PingFang SC;
-	font-weight:500;
+	/* font-weight:500; */
 	color:rgba(51,51,51,1);
 	line-height:33rpx;
 	/* float: left; */
@@ -111,7 +111,7 @@
 }
 .relese-image_detail .left {
 	padding-right: 20rpx;
-	height: 50rpx;
+	height: 46rpx;
 	line-height: 50rpx;
 	color: #F9B72C;
 	background: rgba(249,183,44, .2);
