新增订单详情

--- a/static/css/releaseImgList.css
+++ b/static/css/releaseImgList.css
@@ -245,6 +245,7 @@
 	display: block;
 	margin-right: 34rpx;
 	margin-bottom: 10rpx;
+	object-fit:cover;
 }
 .imageListIn:nth-of-type(3n) {
 	margin: 0 !important;
